@@ -165,7 +165,7 @@ vips_col_Ch2hcmc( float C, float h )
 	}
 
 	P = cos( VIPS_RAD( k7 * h + k8 ) );
-	D = k4 + k5 * P * pow( fabs( P ), k6 );
+	D = k4 + k5 * P * pow( VIPS_FABS( P ), k6 );
 	g = C * C * C * C;
 	f = sqrt( g / (g + 1900.0) );
 	hcmc = h + D * f;
