@@ -52,61 +52,71 @@ vips_sRGB2HSV_line( VipsColour *colour, VipsPel *out, VipsPel **in, int width )
 {
 	unsigned char *p = (unsigned char *) in[0];
 	unsigned char *q = (unsigned char *) out;
+
 	int i;
 
-	unsigned char c_max,c_min,delta;
-
-	float wrap_around_hue, secondary_diff;
-
-
 	for( i = 0; i < width; i++ ) {
+		unsigned char c_max;
+		unsigned char c_min;
+		float secondary_diff;
+		float wrap_around_hue;
 
-		if (p[1] < p[2]) {
-			if (p[2] < p[0]) {
-				// Center red (at top)
+		if( p[1] < p[2] ) {
+			if( p[2] < p[0] ) {
+				/* Center red (at top).
+				 */
 				c_max = p[0];
 				c_min = p[1];
 				secondary_diff = p[1] - p[2];
-				wrap_around_hue = 255.0f;
-			} else {
-				// Center blue
+				wrap_around_hue = 255.0;
+			} 
+			else {
+				/* Center blue.
+				 */
 				c_max = p[2];
-				c_min = VIPS_MIN(p[1], p[0]);
+				c_min = VIPS_MIN( p[1], p[0] );
 				secondary_diff = p[0] - p[1];
-				wrap_around_hue = 170.0f;
+				wrap_around_hue = 170.0;
 			}
-		} else {
-			if (p[1] < p[0]) {
-				// Center red (at bottom)
+		} 
+		else {
+			if( p[1] < p[0] ) {
+				/* Center red (at bottom)
+				 */
 				c_max = p[0];
 				c_min = p[2];
 				secondary_diff = p[1] - p[2];
-				wrap_around_hue = 0.0f;
-			} else {
-				// Center green
+				wrap_around_hue = 0.0;
+			} 
+			else {
+				/* Center green
+				 */
 				c_max = p[1];
-				c_min = VIPS_MIN(p[2], p[0]);
+				c_min = VIPS_MIN( p[2], p[0] );
 				secondary_diff = p[2] - p[0];
-				wrap_around_hue = 85.0f;
+				wrap_around_hue = 85.0;
 			}
 		}
 
 
-		if (c_max == 0) {
+		if( c_max == 0 ) {
 			q[0] = 0;
 			q[1] = 0;
 			q[2] = 0;
-		} else {
+		} 
+		else {
+			unsigned char delta;
+
 			q[2] = c_max;
 			delta = c_max - c_min;
 
-			if (delta == 0) {
+			if( delta == 0 ) 
 				q[0] = 0;
-			} else {
-				q[0] = (42.5f*(secondary_diff / (float) delta) + wrap_around_hue);
-			}
+			else 
+				q[0] = 42.5 * (secondary_diff / (float) delta) +
+				       	wrap_around_hue;
 
-			q[1] = (( delta*255.0f / (float) c_max));
+			q[1] = delta * 255.0 / (float) c_max;
 		}
 
 		p += 3;
